# ocaml-ctypes

./: .depend  .gitignore  .merlin  .travis-ci-arm.sh  .travis-ci.sh  .travis.yml  CHANGES  CHANGES.md  ComplexL.html  Cstubs.BINDINGS.html  Cstubs.FOREIGN.html  Cstubs.Types.BINDINGS.html  Cstubs.Types.TYPE.html  Cstubs.Types.html  Cstubs.html  Cstubs_internals.html  Cstubs_inverted.BINDINGS.html  Cstubs_inverted.INTERNAL.html  Cstubs_inverted.html  Cstubs_structs.BINDINGS.html  Cstubs_structs.TYPE.html  Cstubs_structs.html  Ctypes.Array.html  Ctypes.CArray.html  Ctypes.FOREIGN.html  Ctypes.Root.html  Ctypes.html  Ctypes_primitive_types.html  Ctypes_printers.html  Ctypes_static.html  Ctypes_structs.S.html  Ctypes_structs.html  Ctypes_types.FUNCTION.html  Ctypes_types.TYPE.Intptr.html  Ctypes_types.TYPE.Ptrdiff.html  Ctypes_types.TYPE.Uintptr.html  Ctypes_types.TYPE.html  Ctypes_types.html  Dl.html  Foreign.html  (+128 more)
.github/workflows/: test.yml
appveyor/: build.sh  findlib-patch-create-process.patch  install.sh
examples/cstubs_structs/: Makefile  bindings.ml  bindings_c_gen.ml  main.ml  myocamlbuild.ml
examples/date/: date.ml
examples/fts/: META  fts.ml  fts.mli  fts.mllib  fts_cmd.ml
examples/fts/stub-generation/: dune  fts_if.ml
examples/fts/stub-generation/bindings/: dune  fts_bindings.ml  fts_types.ml
examples/fts/stub-generation/stub-generator/: dune  fts_stub_generator.ml
examples/ncurses/: META  ncurses.ml  ncurses.mli  ncurses.mllib  ncurses_cmd.ml
examples/sigset/: META  sigset.ml  sigset.mli  sigset.mllib
examples/struct-subtyping/: struct_subtyping.ml
misc/: RELATED
remote-call-example/: ex_bindings.ml
src/: META  closure_properties.mli  commit  common.ml  ctypes-foreign.mllib  ctypes.ml  ctypes.mli  ctypes.mllib  ctypes_bigarray.ml  ctypes_bigarray.mli  ctypes_bigarray_stubs.c  ctypes_complex_stubs.c  ctypes_raw.ml  ctypes_stubs.c  dl.ml  dl.mli  dl_stubs.c  dynamic.ml  dynamic_stubs.ml  ffi.ml  ffi.mli  ffi_call_stubs.c  ffi_raw.ml  ffi_stubs.c  ffi_stubs.ml  ffi_type_stubs.c  foreign.ml  foreign.mli  formatters.ml  libctypes-foreign_stubs.clib  libctypes_stubs.clib  managed_buffer_stubs.c  managed_buffer_stubs.h  memory.ml  memory_stubs.ml  posixTypes.ml  posixTypes.mli  posix_types_stubs.c  primitives.ml  raw_pointer.h  (+18 more)
src/configure/: dune  extract_from_c.ml  gen_bigarray_kind_conv.ml  gen_c_primitives.ml  gen_libffi_abi.ml  jbuild  make_primitive_details.c  make_primitive_details.ml  make_primitive_details_stubs.c
src/cstubs/: cstubs.ml  cstubs.mli  cstubs_analysis.ml  cstubs_analysis.mli  cstubs_c_language.ml  cstubs_dispatcher.ml  cstubs_dispatcher.mli  cstubs_emit_c.ml  cstubs_generate_c.ml  cstubs_generate_c.mli  cstubs_generate_ml.ml  cstubs_generate_ml.mli  cstubs_internals.h  cstubs_internals.ml  cstubs_internals.mli  cstubs_inverted.ml  cstubs_inverted.mli  cstubs_public_name.ml  cstubs_public_name.mli  cstubs_structs.ml  cstubs_structs.mli  ctypes_path.ml  ctypes_path.mli  dune  jbuild
src/ctypes/: bigarray_stubs.ml  cArray.ml  coerce.ml  coerce.mli  complexL.ml  complex_stubs.c  complex_stubs.h  cstubs_internals.h  cstubs_internals.ml  cstubs_internals.mli  ctypes.ml  ctypes.mli  ctypes_bigarray.ml  ctypes_bigarray.mli  ctypes_bigarray_stubs.c  ctypes_bigarray_stubs.ml  ctypes_bigarrays.c  ctypes_coerce.ml  ctypes_common.ml  ctypes_complex_compatibility.h  ctypes_complex_stubs.h  ctypes_complex_types.h  ctypes_cstubs_internals.h  ctypes_float16_availability.c  ctypes_float16_availability.h  ctypes_float16_availability.ml  ctypes_ldouble_stubs.h  ctypes_managed_buffer_stubs.h  ctypes_memory.ml  ctypes_memory_stubs.ml  ctypes_path.ml  ctypes_posix_compatibility.h  ctypes_primitive_types.ml  ctypes_primitive_types.mli  ctypes_primitives.h  ctypes_ptr.ml  ctypes_raw.ml  ctypes_raw_pointer.h  ctypes_roots.c  ctypes_static.ml  (+45 more)
src/ctypes-base/: complex_stubs.c  ctypes.ml  ctypes.mli  ctypes_raw.ml  managed_buffer_stubs.c  managed_buffer_stubs.h  posixTypes.ml  posixTypes.mli  posix_types_stubs.c  primitives.h  signed.mli  static.ml  std_views.ml  structs.mli  structs_computed.ml  structs_computed.mli  type_info_stubs.c  value_printing.ml
src/ctypes-foreign/: .dune.swp  ctypes_ffi.ml  ctypes_ffi_stubs.ml  ctypes_foreign_basis.ml  dl.ml.unix  dl.ml.win  dl.mli  dl_stubs.c.unix  dl_stubs.c.win  dune  ffi.mli  ffi_call_stubs.c  ffi_type_stubs.c  foreign.ml  foreign.mli  foreign_threaded_stubs.c
src/ctypes-foreign-base/: closure_properties.ml  ctypes_ffi.ml  ctypes_ffi.mli  ctypes_ffi_stubs.ml  ctypes_foreign_basis.ml  dl.ml  dl.ml.unix  dl.ml.win  dl.mli  dl_stubs.c  dune  ffi.ml  ffi.mli  ffi_call_stubs.c  ffi_stubs.ml  ffi_type_stubs.c  foreign.ml  foreign_basis.ml  jbuild  libffi_abi.mli
src/ctypes-foreign-base/config/: discover.ml  dune  gen_libffi_abi.ml  jbuild
src/ctypes-foreign-threaded/: closure_properties.ml  dune  foreign.ml  foreign.mli  foreign_threaded_stubs.c  jbuild
src/ctypes-foreign-unthreaded/: closure_properties.ml  dune  foreign.ml  foreign.mli  jbuild
src/ctypes-top/: ctypes_printers.ml  ctypes_printers.mli  dune  install_ctypes_printers.ml  install_printers.ml
src/discover/: commands.ml  commands.mli  determine_as_needed_flags.sh  discover.ml
src/libffi-abigen/: libffi_abigen.ml
tests/: cstdlib_functions.txt  test_alignment.ml  test_array.ml  test_bigarrays.ml  test_callback_lifetime.ml  test_complex.ml  test_cstdlib.ml  test_custom_ops.ml  test_errno.ml  test_finalisers.ml  test_foreign_values.ml  test_higher_order.ml  test_oo_style.ml  test_passable.ml  test_pointers.ml  test_raw.ml  test_sizeof.ml  test_structs.ml  test_type_printing.ml  test_unions.ml  test_value_printing.ml  test_views.ml
tests/bench-micro/: .gitignore  .merlin  Makefile  bench_micro.gnuplot  bench_micro.ml  bench_micro_bindings.ml  bench_micro_gen.ml  bench_micro_interpreted.gnuplot  bench_micro_lib.c  bench_micro_stubs.c  (+4 more)
tests/test-funptrs/stub-generator/: dune
top/: ctypes_printers.ml  ctypes_top.mllib  install_printers.ml
travis/: common.sh  linux.sh  osx.sh  prepare.sh  run.sh
(+187 files in other folders)
