opam-version: "2.0"
version: "dev"
synopsis: "Virtual package for enabling the ctypes.foreign subpackage."
description: """\
`ctypes-foreign` is just a virtual OPAM package that determines
whether the foreign subpackage should built as part of ctypes."""
maintainer: "yallop@gmail.com"
authors: "yallop@gmail.com"
tags: ["org:ocamllabs" "org:mirage"]
homepage: "https://github.com/ocamllabs/ocaml-ctypes"
bug-reports: "http://github.com/ocamllabs/ocaml-ctypes/issues"
depends: [
  "ctypes" {post}
  "conf-pkg-config" {build}
  "conf-libffi" {>= "2.0.0"}
]
post-messages: "This package requires libffi on your system" {failure}
dev-repo: "git+http://github.com/ocamllabs/ocaml-ctypes.git"
