opam-version: "2.0"
version: "dev"
maintainer: "yallop@gmail.com"
authors: "yallop@gmail.com"
license: "MIT"
tags: ["org:ocamllabs" "org:mirage"]
homepage: "https://github.com/ocamllabs/ocaml-ctypes"
bug-reports: "http://github.com/ocamllabs/ocaml-ctypes/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "integers"
  "dune" {build}
  "conf-pkg-config" {build}
  "lwt" {with-test & < "4.0.0"}
  "ounit" {with-test}
  "conf-ncurses" {with-test}
]
depopts: [
  "bisect_ppx" {with-test}
  "ocveralls" {with-test}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+http://github.com/ocamllabs/ocaml-ctypes.git"
