opam-version: "1.2"
version: "dev"
maintainer: "yallop@gmail.com"
author: "yallop@gmail.com"
homepage: "https://github.com/ocamllabs/ocaml-ctypes"
dev-repo: "http://github.com/ocamllabs/ocaml-ctypes.git"
bug-reports: "http://github.com/ocamllabs/ocaml-ctypes/issues"
license: "MIT"
build: [
  [make
    "XEN=%{mirage-xen:enable}%"
    "COVERAGE=true" {bisect_ppx:installed}
    "libffi.config"
    "ctypes-base"
    "ctypes-stubs"]
  [make "XEN=%{mirage-xen:enable}%" "ctypes-foreign"] {ctypes-foreign:installed}
]
install: [
  [make "install" "XEN=%{mirage-xen:enable}%"]
]
remove: [
  ["ocamlfind" "remove" "ctypes"]
]
depends: [
   "base-bytes"
   "integers" { < "0.3.0" }
   "ocamlfind" {build}
   "conf-pkg-config" {build}
   "lwt" {test & < "4.0.0"}
   "ctypes-foreign" {test}
   "ounit" {test}
   "conf-ncurses" {test}
]
depopts: [
   "ctypes-foreign"
   "mirage-xen"
   "bisect_ppx" {test}
   "ocveralls" {test}
]
build-test: [
   [make "COVERAGE=true" {bisect_ppx:installed} "test"]
   [make "COVERAGE=true" {bisect_ppx:installed} "run-examples" ] {os != "win32"}
   [make "date" "date-stubs" "date-stub-generator" "date-cmd-build" "date-cmd" ] {os = "win32"}
   ["sh" "-c" "_build/date-cmd.native ; _build/date.native" ] {os = "win32"}
   ["sh" "-c" "ocveralls" "--send bisect*.out" "_build/bisect*.out" ">" "coveralls.json"] {bisect_ppx:installed}
]
tags: ["org:ocamllabs" "org:mirage"]
available: [ ocaml-version >= "4.02.3" ]
