opam-version: "2.0"
version: "dev"
maintainer: "yallop@gmail.com"
author: "yallop@gmail.com"
homepage: "https://github.com/ocamllabs/ocaml-ctypes"
doc: "http://ocamllabs.github.io/ocaml-ctypes"
dev-repo: "git+http://github.com/ocamllabs/ocaml-ctypes.git"
bug-reports: "http://github.com/ocamllabs/ocaml-ctypes/issues"
license: "MIT"
build: [
  [make
    "XEN=%{mirage-xen:enable}%"
    "COVERAGE=true" {bisect_ppx:installed}
    "libffi.config"
    "ctypes-base"
    "ctypes-stubs"]
  [make "XEN=%{mirage-xen:enable}%" "ctypes-foreign"] {ctypes-foreign:installed}
]
install: [
  [make "install" "XEN=%{mirage-xen:enable}%"]
]
depends: [
   "ocaml" {>= "4.03.0"}
   "integers" { >= "0.3.0" }
   "ocamlfind" {build}
   "lwt" {with-test & >= "3.2.0"}
   "ctypes-foreign" {with-test}
   "ounit" {with-test}
   "conf-ncurses" {with-test}
   "bigarray-compat"
]
depopts: [
   "ctypes-foreign"
   "mirage-xen"
   "bisect_ppx" {with-test}
   "ocveralls" {with-test}
]
build-test: [
   [make "COVERAGE=true" {bisect_ppx:installed} "test"]
   [make "COVERAGE=true" {bisect_ppx:installed} "run-examples" ] {os != "win32"}
   [make "date" "date-stubs" "date-stub-generator" "date-cmd-build" "date-cmd" ] {os = "win32"}
   ["sh" "-c" "_build/date-cmd.native ; _build/date.native" ] {os = "win32"}
   ["sh" "-c" "ocveralls" "--send bisect*.out" "_build/bisect*.out" ">" "coveralls.json"] {bisect_ppx:installed}
]
tags: ["org:ocamllabs" "org:mirage"]
synopsis: "Combinators for binding to C libraries without writing any C"

